objects/Monthly_Revenue__c.object
<CustomObject>
    <description>The monthly revenue coming from data warehouse.</description>
    <fields>
        <fullName>ASP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ASP</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <description>The device this revenue is tied.</description>
        <label>Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>Monthly Revenues</relationshipLabel>
        <relationshipName>Monthly_Revenues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity</label>
        <precision>16</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <description>Quantity__c * ASP__c</description>
        <formula>Quantity__c * ASP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Monthly Revenue</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RN-{00000000}</displayFormat>
        <label>Revenue No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly Revenues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>